--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,14 +4,21 @@
     <title>Chatroom</title>
     <script src="resources/js/jquery.js" type="text/javascript"></script>
     <script src="resources/js/messageroom.js" type="text/javascript"></script>
+    <script src="resources/js/MessagesController.js" type="text/javascript"></script>
+    <script src="resources/js/MessagesAjaxAPI.js" type="text/javascript"></script>
+    <script src="resources/js/MessagesModel.js" type="text/javascript"></script>
+    <script src="resources/js/MessagesView.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             MessageApp.init();
-            $('#postMessageForm').submit(function() {
+            var msgController = MessageApp.Controllers.Messages;
+
+
+            $('#postMessageButton').click(function() {
                 var user = $('#userInput').val();
                 var msg = $('#messageInput').val();
 
-                MessageApp.Controllers.Messages.newMessage(user, msg);
+                msgController.newMessage(user, msg);
 
                 $('#userInput').val('');
                 $('#messageInput').val('');
@@ -83,10 +90,13 @@
             width:125px;
             height:31px;
             text-align:center;
-            line-height:31px;
-            color:#FFFFFF;
             font-size:11px;
             font-weight:bold;
+        }
+
+        #chatMessages {
+            height: 250px;
+            overflow: auto;
         }
 
     </style>
